--- a/News.html
+++ b/News.html
@@ -8,13 +8,15 @@
     <title>Tin Tức Ẩm Thực Hà Nội | Review Địa Điểm</title>
 </head>
 <body>
-    <header class="header-news">
-        <h1>Ẩm Thực Hà Nội</h1>
-        <nav>
-            <ul class="menu">
-                <li><a href="detail.html" class="active">Trang chủ</a></li>
+    <nav>
+        <div class="menu">
+            <div class="logo">
+                <a href="test2.html">FOODnCHILL</a>
+            </div>
+            <ul class="item">
+                <li><a href="test2.html">Trang chủ</a></li>
                 <li class="dropdown">
-                    <a href="#">Địa điểm ▾</a>
+                    <a href="#">Địa điểm</a>
                     <ul class="dropdown-content">
                         <li><a href="dia-diem.html?quan=CauGiay">Cầu Giấy</a></li>
                         <li><a href="dia-diem.html?quan=HoanKiem">Hoàn Kiếm</a></li>
@@ -22,15 +24,12 @@
                         <li><a href="dia-diem.html?quan=ThanhXuan">Thanh Xuân</a></li>
                     </ul>
                 </li>
-                <li><a href="news.html">Tin tức</a></li>
-                <li><a href="feedback.html">Góp ý</a></li>
+                <li><a href="tin-tuc.html">Tin tức</a></li>
+                <li><a href="gop-y.html">Góp ý</a></li>
             </ul>
-        </nav>
-        <!-- <div class="search">
-            <input type="text" id="searchInput" placeholder="Tìm kiếm..." aria-label="Tìm kiếm tin tức">
-            <button onclick="handleSearch()">Tìm</button>
-        </div> -->
-    </header>
+        </div>
+    </nav>
+
     
     <main class="container">
         <div class="white-background-section">
@@ -60,9 +59,22 @@
 
     <footer>
         <div class="footer-content">
-            <p>© 2025 Review Địa Điểm Hà Nội | Email: contact@example.com</p>
+            <div class="footer-column">
+                <h3>Về chúng tôi</h3>
+                <p>Website giới thiệu ẩm thực, những nới vui chơi ở Hà Nội, giúp bạn khám phá những địa điểm ăn uống ngon tại các quận nội thành.</p>
+            </div>
+            <div class="footer-column">
+                <h3>Liên hệ</h3>
+                <ul>
+                    <li>Email: nguyenduckanhrMU@gmail.com</li>
+                    <li>Điện thoại: 0353231415</li>
+                    <li>Địa chỉ: Manchester, England</li>
+                </ul>
+            </div>
         </div>
-    </footer>
+        <div class="copyright">
+            <p>&copy; 2025 Hà Nội </p>
+        </div>
     <script src="news.js"></script>
 </body>
 </html>
